# cheapotrack

./: CMakeLists.txt  LICENSE  Notes  README.md  calibrate.py  cheapotrack.h  circle_point_input.py  historylinearpredictor.hpp  tracker.m
calibration/images/: calibrationcross_circles.json  glasses001_circles.json  laserfrontcross_circles.json
device/: CMakeLists.txt
device/driver/: CMakeLists.txt  ProtocolClient.cpp  ProtocolClient.h  driver_dump1.cpp
device/firmware/: PixArt.cpp  PixArt.h  Point.h  ProtocolEnums.h  ProtocolServer.cpp  ProtocolServer.h  firmware.ino
device/info/: IR Sensor - Wiimote Wiki.html  data.txt
device/info/IR Sensor - Wiimote Wiki_files/: ajax.js  index.php5
firmware/: Notes  PixArt.h  positioning.ino  simpletest1.cpp
firmware/firmware1/: PixArt.cpp  PixArt.h  TrackingPacket.h  TrackingProtocol.h  firmware1.ino
firmware/info/IR Sensor - Wiimote Wiki_files/: commonPrint.css  wikibits.js
firmware/info/teensy_positioning/: teensy_positioning.ino
firmware/lib/: TrackingPacket.h
firmware/pvtest/: pvtest.ino
